# video-processor

./: db.sqlite3  manage.py  pyproject.toml
VideoProcessor/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
video/: admin.py  consumers.py  models.py  serializers.py  urls.py  utils.py  views.py
video/migrations/: 0001_initial.py  0002_remove_video_version.py
